# Fostering-Accountability-and-Collaborative-Engagements-for-Integrity-and-Transformation

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  be_pipe.py  deploy.sh  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yml  gh-pages.yml  release.yml
config/: config.toml
deployment/: Dockerfile  README.md  docker-compose.yml
deployment/config/: deployment.yaml
docs/: API_CREDENTIALS_GUIDE.md  CODE_OF_CONDUCT.md  DEPLOYMENT_GUIDE.md  _config.yml  _toc.yml  bibliography.bib  citation.md  installation.md  usage.md
src/jurisai/: LICENSE_HEADER.txt  __init__.py
src/worldbank/: app.py
